--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,25 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 860px;
+  padding: 32px;
+  max-width: 100%;
+  margin: auto;
+  margin-top: 82px; 
+  background: #fff;
+  border-radius: 16px;
+}
+
+.header {
+  position: sticky;
   width: 100%;
-  height: 100%;
+  background: #fff;
+  top: 0;
+  margin: 0;
+  font-size: 24px;
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
