--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   font-size: 24px;
   height: 50px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
