--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
   --bg-color: #F5F5F5;
   --bg-transition: background 0.1s ease-in-out;
   --accent-color: #635EE7;
-  --accent-bg: #d0cff8;
+  --accent-bg: #c0f69f;
   --accent-bg-light: #efeffd;
   --font-color: #222;
   --font-size: 16px;
@@ -15,11 +15,11 @@ body, html {
   background: var(--bg-color);
   font-family: Arial, Helvetica, sans-serif;
   font-size: var(--font-size);
+  background: var(--accent-bg);
 }
 
 img {
   max-width: 100%;
-  max-height: 100%;
 }
 
 button {
