--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,19 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 860px;
-  padding: 32px;
-  max-width: 100%;
-  margin: auto;
-  margin-top: 82px; 
-  background: #fff;
-  border-radius: 16px;
-}
-
 .header {
   position: sticky;
   width: 100%;
   background: #fff;
   top: 0;
   margin: 0;
+  margin-bottom: 0.5em;
   font-size: 24px;
   height: 50px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+}
+
+a.disabled {
+  pointer-events: none;
+  color: #9E9E9E;
 }
