--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,7 @@
 :root {
   --bg-color: #F5F5F5;
   --bg-transition: background 0.1s ease-in-out;
-  --accent-color: #635EE7;
+  --accent-color: #b21f1f;
   --accent-bg: #c0f69f;
   --accent-bg-light: #efeffd;
   --font-color: #222;
@@ -47,4 +47,37 @@ a, a:visited {
 
 a:hover {
   text-decoration: underline;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 860px;
+  padding: 32px;
+  max-width: 100%;
+  margin: 2em auto;
+  background: #fff;
+  border-radius: 16px;
+}
+
+.header {
+  position: sticky;
+  width: 100%;
+  background: #fff;
+  top: 0;
+  margin: 0;
+  margin-bottom: 0.5em;
+  font-size: 24px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+a.disabled {
+  pointer-events: none;
+  color: #9E9E9E;
 }
